Move z-index of search so only active searches to prevent weird layouts
SRFCMSAL-857

--- a/source/_patterns/10-atoms/navigation/search.scss
+++ b/source/_patterns/10-atoms/navigation/search.scss
@@ -27,6 +27,8 @@
 }
 
 .search--active {
+  z-index: 200;
+
   .search__input {
     color: $color-text-default;
   }
